tests/fail/elaboration/array-literal-not-supported.snap
stdout = ''
stderr = '''
error: array literal not supported for expected type
  ┌─ tests/fail/elaboration/array-literal-not-supported.fathom:3:1
  │
3 │ [] : Void
  │ ^^

'''
